Update: Texte profil adapté pour développeur junior

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           "addressLocality": "Paris",
           "addressCountry": "FR"
         },
-        "description": "Développeur web passionné avec une solide expérience dans la création d'applications web modernes et performantes.",
+        "description": "Développeur web junior passionné, fraîchement diplômé d'une formation full-stack. Créatif et rigoureux, je donne vie à des projets web modernes.",
         "knowsAbout": [
           "HTML",
           "CSS",
@@ -400,16 +400,13 @@
           <div class="grid md:grid-cols-2 gap-12 items-center">
             <div class="space-y-6">
               <p class="text-lg text-gray-300 leading-relaxed">
-                Développeur web passionné avec une solide expérience dans la
-                création d'applications web modernes et performantes. Je combine
-                créativité et expertise technique pour donner vie à des projets
-                innovants.
+                Développeur web junior passionné, fraîchement diplômé d'une formation en développement web full-stack. 
+                Je combine créativité et rigueur technique pour donner vie à des projets web modernes et innovants.
               </p>
               <p class="text-lg text-gray-300 leading-relaxed">
-                Mon approche se concentre sur l'écriture de code propre, la
-                performance et l'expérience utilisateur. Je suis constamment en
-                apprentissage pour rester à jour avec les dernières technologies
-                et les meilleures pratiques.
+                Mon approche se concentre sur l'écriture de code propre, la performance et l'expérience utilisateur. 
+                Motivé et curieux, je suis en apprentissage continu pour maîtriser les dernières technologies et 
+                les meilleures pratiques du développement web.
               </p>
               <div class="grid grid-cols-2 gap-6 pt-6">
                 <div
