--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       property="og:description"
       content="Portfolio professionnel présentant mes projets et compétences en développement web"
     />
-    <meta property="og:url" content="https://votre-domaine.com" />
+    <meta
+      property="og:url"
+      content="https://aurel1407.github.io/new_portfolio/"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -83,7 +86,7 @@
         "@type": "Person",
         "name": "Aurélien Thébault",
         "jobTitle": "Développeur Web Full-Stack",
-        "url": "https://votre-domaine.com",
+        "url": "https://aurel1407.github.io/new_portfolio/",
         "sameAs": [
           "https://github.com/Aurel1407",
           "https://www.linkedin.com/in/aurélien-thébault-244b84336"
@@ -1249,12 +1252,30 @@
           <div>
             <h4 class="text-lg font-semibold mb-4">Stack Technique</h4>
             <div class="flex flex-wrap gap-2">
-              <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-lg text-sm border border-blue-500/30">React</span>
-              <span class="px-3 py-1 bg-cyan-500/20 text-cyan-300 rounded-lg text-sm border border-cyan-500/30">TypeScript</span>
-              <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-lg text-sm border border-green-500/30">Node.js</span>
-              <span class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-lg text-sm border border-purple-500/30">Tailwind CSS</span>
-              <span class="px-3 py-1 bg-yellow-500/20 text-yellow-300 rounded-lg text-sm border border-yellow-500/30">JavaScript</span>
-              <span class="px-3 py-1 bg-pink-500/20 text-pink-300 rounded-lg text-sm border border-pink-500/30">SQL</span>
+              <span
+                class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-lg text-sm border border-blue-500/30"
+                >React</span
+              >
+              <span
+                class="px-3 py-1 bg-cyan-500/20 text-cyan-300 rounded-lg text-sm border border-cyan-500/30"
+                >TypeScript</span
+              >
+              <span
+                class="px-3 py-1 bg-green-500/20 text-green-300 rounded-lg text-sm border border-green-500/30"
+                >Node.js</span
+              >
+              <span
+                class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-lg text-sm border border-purple-500/30"
+                >Tailwind CSS</span
+              >
+              <span
+                class="px-3 py-1 bg-yellow-500/20 text-yellow-300 rounded-lg text-sm border border-yellow-500/30"
+                >JavaScript</span
+              >
+              <span
+                class="px-3 py-1 bg-pink-500/20 text-pink-300 rounded-lg text-sm border border-pink-500/30"
+                >SQL</span
+              >
             </div>
           </div>
         </div>
