--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             >
           </div>
 
-          <!-- Menu de bureau -->
+          <!-- Menu version bureau (≥768px) -->
           <div class="hidden md:block">
             <div class="ml-10 flex items-baseline space-x-8" role="menubar">
               <a
@@ -253,7 +253,7 @@
       class="min-h-screen flex items-center justify-center relative overflow-hidden pt-16"
       aria-labelledby="hero-heading"
     >
-      <!-- Arrière-plan animé -->
+      <!-- Arrière-plan décoratif de la section Hero (dégradés + motif grille + blobs animés) -->
       <div
         class="absolute inset-0 bg-gradient-to-br from-slate-900 via-purple-900 to-slate-900"
         aria-hidden="true"
@@ -536,7 +536,7 @@
           </div>
 
           <div class="grid md:grid-cols-3 gap-8">
-            <!-- Front-End -->
+            <!-- Carte Front-End -->
             <div
               class="bg-white/10 backdrop-blur-sm border border-white/20 p-8 rounded-2xl shadow-lg hover:bg-white/15 hover:shadow-2xl hover:shadow-blue-500/20 transition-all transform hover:-translate-y-2"
             >
@@ -600,7 +600,7 @@
               </div>
             </div>
 
-            <!-- Back-End -->
+            <!-- Carte Back-End -->
             <div
               class="bg-white/10 backdrop-blur-sm border border-white/20 p-8 rounded-2xl shadow-lg hover:bg-white/15 hover:shadow-2xl hover:shadow-purple-500/20 transition-all transform hover:-translate-y-2"
             >
@@ -664,7 +664,7 @@
               </div>
             </div>
 
-            <!-- Tools -->
+            <!-- Carte Outils -->
             <div
               class="bg-white/10 backdrop-blur-sm border border-white/20 p-8 rounded-2xl shadow-lg hover:bg-white/15 hover:shadow-2xl hover:shadow-pink-500/20 transition-all transform hover:-translate-y-2"
             >
