Remplacement section captures par processus de développement

--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -312,54 +312,76 @@
           </div>
         </section>
 
-        <!-- Galerie de captures d'écran -->
+        <!-- Processus de développement -->
         <section class="mb-12">
           <h2 class="text-3xl font-bold text-gray-900 mb-6">
-            Captures d'écran
+            Processus de développement
           </h2>
-          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <!-- Placeholder pour les images -->
-            <div class="bg-gray-200 rounded-xl aspect-video flex items-center justify-center">
-              <div class="text-center">
-                <i class="fas fa-image text-gray-400 text-4xl mb-2"></i>
-                <p class="text-gray-500 text-sm">Hero Section</p>
+          <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <!-- Étape 1 : Conception -->
+            <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition-shadow">
+              <div class="flex flex-col items-center text-center">
+                <div class="w-16 h-16 bg-gradient-to-br from-gray-600 to-gray-700 rounded-full flex items-center justify-center mb-4">
+                  <i class="fas fa-pencil-ruler text-white text-2xl"></i>
+                </div>
+                <div class="text-3xl font-bold text-gray-400 mb-2">01</div>
+                <h3 class="text-xl font-bold text-gray-900 mb-3">
+                  Conception
+                </h3>
+                <p class="text-gray-600 text-sm">
+                  Définition du design, choix de la palette neutre et structure des sections
+                </p>
               </div>
             </div>
-            <div class="bg-gray-200 rounded-xl aspect-video flex items-center justify-center">
-              <div class="text-center">
-                <i class="fas fa-image text-gray-400 text-4xl mb-2"></i>
-                <p class="text-gray-500 text-sm">Section À propos</p>
+
+            <!-- Étape 2 : Développement -->
+            <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition-shadow">
+              <div class="flex flex-col items-center text-center">
+                <div class="w-16 h-16 bg-gradient-to-br from-gray-500 to-gray-600 rounded-full flex items-center justify-center mb-4">
+                  <i class="fas fa-code text-white text-2xl"></i>
+                </div>
+                <div class="text-3xl font-bold text-gray-400 mb-2">02</div>
+                <h3 class="text-xl font-bold text-gray-900 mb-3">
+                  Développement
+                </h3>
+                <p class="text-gray-600 text-sm">
+                  Intégration HTML/CSS avec Tailwind, animations JavaScript et responsive design
+                </p>
               </div>
             </div>
-            <div class="bg-gray-200 rounded-xl aspect-video flex items-center justify-center">
-              <div class="text-center">
-                <i class="fas fa-image text-gray-400 text-4xl mb-2"></i>
-                <p class="text-gray-500 text-sm">Compétences</p>
+
+            <!-- Étape 3 : Optimisation -->
+            <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition-shadow">
+              <div class="flex flex-col items-center text-center">
+                <div class="w-16 h-16 bg-gradient-to-br from-gray-400 to-gray-500 rounded-full flex items-center justify-center mb-4">
+                  <i class="fas fa-tachometer-alt text-white text-2xl"></i>
+                </div>
+                <div class="text-3xl font-bold text-gray-400 mb-2">03</div>
+                <h3 class="text-xl font-bold text-gray-900 mb-3">
+                  Optimisation
+                </h3>
+                <p class="text-gray-600 text-sm">
+                  Tests de performance, accessibilité WCAG, SEO et optimisation du code
+                </p>
               </div>
             </div>
-            <div class="bg-gray-200 rounded-xl aspect-video flex items-center justify-center">
-              <div class="text-center">
-                <i class="fas fa-image text-gray-400 text-4xl mb-2"></i>
-                <p class="text-gray-500 text-sm">Projets</p>
-              </div>
-            </div>
-            <div class="bg-gray-200 rounded-xl aspect-video flex items-center justify-center">
-              <div class="text-center">
-                <i class="fas fa-image text-gray-400 text-4xl mb-2"></i>
-                <p class="text-gray-500 text-sm">Formulaire de contact</p>
-              </div>
-            </div>
-            <div class="bg-gray-200 rounded-xl aspect-video flex items-center justify-center">
-              <div class="text-center">
-                <i class="fas fa-image text-gray-400 text-4xl mb-2"></i>
-                <p class="text-gray-500 text-sm">Version mobile</p>
+
+            <!-- Étape 4 : Déploiement -->
+            <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition-shadow">
+              <div class="flex flex-col items-center text-center">
+                <div class="w-16 h-16 bg-gradient-to-br from-gray-300 to-gray-400 rounded-full flex items-center justify-center mb-4">
+                  <i class="fas fa-rocket text-white text-2xl"></i>
+                </div>
+                <div class="text-3xl font-bold text-gray-400 mb-2">04</div>
+                <h3 class="text-xl font-bold text-gray-900 mb-3">
+                  Déploiement
+                </h3>
+                <p class="text-gray-600 text-sm">
+                  Versioning Git, mise en ligne et maintenance continue du site
+                </p>
               </div>
             </div>
           </div>
-          <p class="text-sm text-gray-500 mt-4 text-center italic">
-            <i class="fas fa-info-circle mr-1"></i>
-            Les captures d'écran seront ajoutées prochainement
-          </p>
         </section>
 
         <!-- Liens du projet -->
